# msd

./: dataset.md  pull_modules.sh  pyproject.toml
notebooks/: init_study.py
src/msd/: case.py  geometry.py  main.py  paths.py
src/msd/examples/: layout.py  layout_utils.py  rotation.py  test01.py  utils.py
src/msd1/: __init__.py  case.py  main.py  rectangular_calc.py
src/msd1/examples/: layout.py  rotation.py  test01.py  utils.py
static/_02_plans/msd_48475/: data.csv  domains.pickle  rooms.pickle
static/_03_models/msd_48475/: out.idf
static/_03_models/msd_48475/results/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplusout.shd  eplusout.sql  eplustbl.htm  sqlite.err
